<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PerfilUsuario">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="66dp"
            android:padding="25dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/lblbienvenida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="8dp"
                android:text="Hola"
                android:textColor="#000000"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:text="Estos son tus datos"
                android:textColor="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblbienvenida" />


            <Button
                android:id="@+id/btnactualizarfoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:background="@drawable/shape_botonazul"
                android:padding="15dp"
                android:shadowColor="@android:color/transparent"
                android:text="Actualizar Foto"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/foto" />

            <ImageView
                android:id="@+id/foto"
                android:layout_width="136dp"
                android:layout_height="141dp"
                android:layout_marginTop="35dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:srcCompat="@drawable/ic_user" />

            <EditText
                android:id="@+id/txtnombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="36dp"
                android:background="@drawable/shape_textboxregistro"
                android:drawableLeft="@drawable/ic_name"
                android:drawablePadding="10dp"
                android:hint="@string/registro_txt1"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="#003152"
                android:textColorHighlight="#0F77F6"
                android:textColorHint="#DDDEE0"
                app:layout_constraintTop_toBottomOf="@+id/btnactualizarfoto"
                tools:layout_editor_absoluteX="25dp" />

            <EditText
                android:id="@+id/txtapellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="12dp"
                android:background="@drawable/shape_textboxregistro"
                android:drawableLeft="@drawable/ic_lastname"
                android:drawablePadding="10dp"
                android:hint="@string/registro_txt2"
                android:padding="10dp"
                android:textColor="#003152"
                android:textColorHighlight="#0F77F6"
                android:textColorHint="#DDDEE0"
                android:singleLine="true"
                app:layout_constraintTop_toBottomOf="@+id/txtnombre"
                tools:layout_editor_absoluteX="25dp" />

            <EditText
                android:id="@+id/txtemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="12dp"
                android:background="@drawable/shape_textboxregistro"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:hint="@string/main_email"
                android:padding="10dp"
                android:textColor="#003152"
                android:textColorHighlight="#0F77F6"
                android:textColorHint="#DDDEE0"
                android:singleLine="true"
                app:layout_constraintTop_toBottomOf="@+id/txtapellido"
                tools:layout_editor_absoluteX="16dp" />

            <EditText
                android:id="@+id/txtclave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/shape_textboxregistro"
                android:drawableLeft="@drawable/ic_padlock"
                android:drawablePadding="10dp"
                android:hint="@string/main_clave"
                android:padding="10dp"
                android:textColor="#003152"
                android:textColorHighlight="#0F77F6"
                android:textColorHint="#DDDEE0"
                android:inputType="textPassword"
                android:singleLine="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtemail"
                app:layout_constraintVertical_bias="0.0"
                tools:layout_editor_absoluteX="25dp" />


            <Button
                android:id="@+id/btnmodificar"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_botonazulclaro"
                android:shadowColor="@android:color/transparent"
                android:text="Actualizar datos"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="@+id/btncerrar"
                app:layout_constraintEnd_toEndOf="@+id/txtclave" />

            <Button
                android:id="@+id/btncerrar"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/shape_botonnaranja"
                android:shadowColor="@android:color/transparent"
                android:text="Cerrar sesion"
                android:textColor="#FFFFFF"
                app:layout_constraintStart_toStartOf="@+id/txtclave"
                app:layout_constraintTop_toBottomOf="@+id/txtclave" />




        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:background="#CCCCCC"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/btnestablecimientos"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:drawableTop="@drawable/ic_store_black_24dp"
                android:text="Establecimientos"
                android:textColor="#DBDBDB" />

            <ImageView
                android:id="@+id/imgseparacionrutadetalle21"
                android:layout_width="1dp"
                android:layout_height="60dp"
                android:layout_gravity="left"
                android:background="#D9D9D9" />

            <Button
                android:id="@+id/btnperfil"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:drawableTop="@drawable/ic_person_selected"
                android:text="Perfil"
                android:textColor="#E96D54" />




        </LinearLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>